<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0f1a2b"
    tools:context=".UpdateActivity">

    <EditText
        android:id="@+id/updateTextTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="198dp"
        android:layout_marginEnd="102dp"
        android:ems="10"
        android:hint="@string/task"
        android:textColorHint="#6A6868"
        android:textColor="@color/white"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="57dp"
        android:textColor="@color/white"
        android:layout_marginEnd="102dp"
        android:textColorHint="#6A6868"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateTextTask" />

    <EditText
        android:id="@+id/updateTextDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:textColorHint="#6A6868"
        android:ems="10"
        android:hint="@string/day"
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateTextTime" />

    <TextView
        android:id="@+id/textViewAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="175dp"
        android:text="@string/updateTask"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="161dp"
        android:text="@string/update"
        android:backgroundTint="#bc8339"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateTextDay" />
</androidx.constraintlayout.widget.ConstraintLayout>